fixed mobile issues, div was bleeding out

--- a/client/public/style.css
+++ b/client/public/style.css
@@ -511,7 +511,13 @@ text-shadow: 0px 0px 16px rgba(0,0,0, .8);
     
     .about-me{
         position: relative;
+        padding: 0%;
        
+    }
+
+
+    .about-me h1 {
+        font-size: 36px;
     }
     .nav-link {
         display: block;
@@ -576,10 +582,35 @@ text-shadow: 0px 0px 16px rgba(0,0,0, .8);
     .your-weath, .moovi, .gigem{
         background-color: rgba(171, 171, 171, 0.8);
         color: #444;
-        padding: 2%;
+        padding: 0%;
         display: grid;
         grid-template-columns: auto;
         
+    }
+
+    .resume-layout {
+        padding: 0%;
+    }
+
+    .resume-layout h1 {
+        font-size: 36px;
+    }
+
+    .res-content h3 {
+        text-align: left;
+        color: rgb(47, 45, 45);
+        font-size: 23px;
+    }
+    
+    .res-content h4{
+        color: black;
+        padding-left: 2%;
+        font-size: 20px;
+    }
+    .res-content h5 {
+        padding-left: 2%;
+        color: black;
+        font-size: 18px;
     }
     
     /* .side-profile-content{
